--- a/src/assets/scss/_generics.scss
+++ b/src/assets/scss/_generics.scss
@@ -11,3 +11,16 @@ a {
 body {
     font-family: "Open Sans";
 }
+
+ul li {
+    list-style-type: none;
+}
+
+
+body {
+    height: 100vh;
+}
+
+#app {
+    height: 100%;
+}
